fixed z-index of sliding menus and added static graph label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body{
 #side-menu, #favs-menu{
     background-color: #303030;
     color: #818385;
-    z-index: 1;
+    z-index: 10;
     height: 100%;
     position: fixed;
     top: 0;
